<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="author">Nicolas Morin</string>
    <string name="app_name">Andropoïétique</string>
    <string name="app_intro">Un livre d\'artiste sur Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>

    <string-array name="titles_array">
        <item>Statue</item>
        <item>Guide de voyage</item>
        <item>Tout est chair en mon propre centre</item>
        <item>Théâtre des cruautés</item>
        <item>Avril</item>
        <item>Menton sur la poitrine</item>
        <item>Lisboa azul</item>
    </string-array>

    <string name="title_activity_statue">Statue</string>
    <string name="placeholder_statue">Statue inner text</string>
    <string name="title_activity_cheval_guerre">ChevalGuerreActivity</string>
    <string name="placeholder_cheval_guerre">Cheval guerre placeholder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chair_centre_title">Tout est chair en mon propre centre</string>
    <string name="chair_centre_alarmtxt">Ce poème vous sera livré dans les prochaines 24 heures. Par surprise.</string>
    <string name="chair_centre_p1">J’ai rêvé que j’étais de leur peuple et le suis : on appelle bien sauvage un blé domestiqué, et la machoîre animée d’un lapin sans vie, comme une ville, peut bien filtrer la neige, et sa couleur : on meurt toujours sans imagination.</string>
    <string name="chair_centre_p2">Ce rêve populiste n’est pas d’alliage mais de métal pur : une chimie du mensonge où je crois. Cela n’a d’ailleurs aucune importance; il n’y a pas d’image : les lamelles de bois, la Finlande, inscrite par ses plus humbles serviteurs, etcetera, le champ des Maures et celui de Saint-George, une longue liste de notes aussi personnelles que le concert, dans le jardin, des feuilles qui exécutent « Denn alles Fleisch, es ist wie Grass ».</string>
    <string name="chair_centre_p3">Le peuple des ossements, dont je suis moi aussi quand je vide mes poches, quand d’un coup de poing on sort une bibliothèque de mon estomac, est un peuple en armes. La guerre fait rage sur mon champ de vision et mon œil, tel un Général, ne perçoit que les soldats, qui coulent de ses doigts dans le lac du monde. C’est un empire qui n’a pas de frontière : je marche perdu en mon propre centre.</string>
    <string name="title_activity_chair_centre">Tout est chair…</string>
    <string name="title_activity_guide_voyage">Guide de voyage</string>
    <string name="guide_voyage_1">Après dix-huit heures nous pourrions rencontrer</string>
    <string name="guide_voyage_2">Quelques sardines en manteau d’argent,</string>
    <string name="guide_voyage_3">Une bernache, si c’est novembre,</string>
    <string name="guide_voyage_4">Un campagnol roux (page quarante-quatre).</string>
    <string name="guide_voyage_5">Dans ce désir concret comme une aquarelle, le ventre jaune d’une bergeronnette côtoie l’or d’une boîte de cigares ancienne de marque Batavia ;</string>
    <string name="guide_voyage_6">Ou bien : un merle de roche vole dans la pièce, trois minutes qui sont comme une pleine journée de soleil et de fruits.</string>
    <string name="guide_voyage_7">Ce rêve-ci est une marqueterie achevée,</string>
    <string name="guide_voyage_8">Une toile dans la fraîcheur muséographique du soir.</string>
    <string name="title_activity_theatre">Théâtre des cruautés</string>
    <string name="title_activity_avril">Avril</string>
    <string name="avril_text">Blanc-mauve du ciel sur les murs\nDe bleu frais où bruit\nL’ombre sonore des feuilles</string>
    <string name="title_activity_menton">Menton sur la poitrine</string>
    <string name="menton_add_item">verser</string>
    <string name="menton_remove_item">renverser</string>
    <string name="title_activity_lisboa">Lisboa azul</string>
    <string name="lisboa_1">Lisbonne bleue calme trajectoire de flèche atlantique</string>
    <string name="lisboa_2">Où mur chaud ourlé de palmes et de pierre attend.</string>
    <string name="lisboa_3">Hors les films aux champs goudronnés,</string>
    <string name="lisboa_4">Hors les barbelés de lumière</string>
    <string name="lisboa_5">Oubliés des guerres pacifiques,</string>
    <string name="lisboa_6">Les taxis crèmes étirent leurs confortables étoiles.</string>
    <string name="lisboa_7">Lisbonne notre mer se récite au vent :</string>
    <string name="lisboa_8">Sur nappe blanche d’oursins de poulpes et de pains détachés</string>
    <string name="lisboa_9">D’un Grand Tour. Aussi : dans un verre</string>
    <string name="lisboa_10">A moutarde, café chargé de</string>
    <string name="lisboa_11">Lait, de cannelle, debout. Cantines</string>
    <string name="lisboa_12">Cachées au fond de boutiques sans presque de façade.</string>
</resources>
