<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/lisboa_linearlayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/holo_blue_dark"
        android:animateLayoutChanges="true"
        tools:context="com.nicolasmorin.andropoetique.LisboaActivity">

        <TextView
            android:id="@+id/lisboa_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_1"
            style="@style/AppTheme.ParaLisboa"
            android:layout_marginTop="60dp"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_2"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_3"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_4"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_5"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_6"
            style="@style/AppTheme.ParaLisboa.Last"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_7"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_8"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_9"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_10"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_11"
            style="@style/AppTheme.ParaLisboa"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/lisboa_12"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lisboa_12"
            style="@style/AppTheme.ParaLisboa.Last"
            android:visibility="invisible"/>
    </LinearLayout>

</ScrollView>
