<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guide_voyage_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/guide_voyage_linearlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.nicolasmorin.andropoetique.GuideVoyageActivity$PlaceholderFragment"
        android:baselineAligned="false"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/guide_voyage_title"
            android:text="@string/title_activity_guide_voyage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TitleFont"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_1"
            android:text="@string/guide_voyage_1"
            style="@style/AppTheme.Para"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_2"
            android:text="@string/guide_voyage_2"
            style="@style/AppTheme.Para"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_3"
            android:text="@string/guide_voyage_3"
            style="@style/AppTheme.Para"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_4"
            android:text="@string/guide_voyage_4"
            style="@style/AppTheme.Para.Last"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_5"
            android:text="@string/guide_voyage_5"
            style="@style/AppTheme.Para"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_6"
            android:text="@string/guide_voyage_6"
            style="@style/AppTheme.Para.Last"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_7"
            android:text="@string/guide_voyage_7"
            style="@style/AppTheme.Para"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guide_voyage_8"
            android:text="@string/guide_voyage_8"
            style="@style/AppTheme.Para.Last"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>