<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.nicolasmorin.andropoetique.ChairCentreActivity$PlaceholderFragment">

        <TextView
            android:text="@string/chair_centre_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TitleFont"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/chair_centre_p1"
            style="@style/AppTheme.Para"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/chair_centre_p2"
            style="@style/AppTheme.Para"
            android:typeface="serif" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/chair_centre_p3"
            style="@style/AppTheme.Para" />

    </LinearLayout>

</ScrollView>